Added Grabber-realsense.cpp, image-display.cpp and tracker-rgbd-realsense.cpp from visp tutorial examples. Build is not successful. Changed CMakeLists.txt to comment some executables out.

--- a/mir_vision/CMakeLists.txt
+++ b/mir_vision/CMakeLists.txt
@@ -19,13 +19,14 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_geometry_msgs
   turtlesim
 )
-# find_package(VISP REQUIRED 
-#   visp_core 
-#   visp_mbt 
-#   visp_io 
-#   visp_gui 
-#   visp_sensor
-# )
+find_package(VISP REQUIRED 
+   visp_core 
+   visp_mbt 
+   visp_io 
+   visp_gui 
+   visp_sensor
+)
+# find_package(realsense2 REQUIRED)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -132,7 +133,8 @@ catkin_package(
 include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
-  # ${VISP_INCLUDE_DIRS}
+  ${VISP_INCLUDE_DIRS}
+ # ${realsense2_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
@@ -149,8 +151,10 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/mir_vision_node.cpp)
-# add_executable( rgbd_tracker ${sample_dir}tutorial-mb-generic-tracker-rgbd-realsense.cpp )
-add_executable( detection ${sample_dir}detection.cpp )
+add_executable( image_display ${sample_dir}tutorial-image-display.cpp )
+#add_executable( detection ${sample_dir}detection.cpp )
+add_executable( rgbd_tracker ${sample_dir}tutorial-mb-generic-tracker-rgbd-realsense.cpp )
+#add_executable( tutorial-viewer ${sample_dir}tutorial-grabber-realsense.cpp )
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -166,8 +170,12 @@ add_executable( detection ${sample_dir}detection.cpp )
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
-# target_link_libraries(rgbd_tracker ${catkin_LIBRARIES} ${VISP_LIBRARIES})
-target_link_libraries(detection ${catkin_LIBRARIES} )
+target_link_libraries(image_display ${catkin_LIBRARIES} ${VISP_LIBRARIES})
+#target_link_libraries(detection ${catkin_LIBRARIES} )
+#target_link_libraries(rgbd_tracker ${catkin_LIBRARIES} ${VISP_LIBRARIES} ${realsense2_LIBRARY})
+target_link_libraries(rgbd_tracker ${catkin_LIBRARIES} ${VISP_LIBRARIES} )
+#target_link_libraries(tutorial-viewer ${catkin_LIBRARIES} ${VISP_LIBRARIES})
+
 
 #############
 ## Install ##
