Minimal DetectionAction Server implemented.
- detection with features (SIFT, SURF, ORB)
- Start Camera function
- createLearningImages function is just for test purpose  inside class

--- a/mir_vision/config/searchPoses.config
+++ b/mir_vision/config/searchPoses.config
@@ -1,6 +1,7 @@
- 3.7,  1.60, 0.0, 0.0, 0.0, 0.016,  0.999
+#  Position (px,py,pz)	Orientation (qx,qy,qz,qw)
+#  px, 	 py,  pz,  qx,  qy,    qz,     qw
+ 3.70, 1.60, 0.0, 0.0, 0.0, 0.016,  0.999
  8.45, 2.60, 0.0, 0.0, 0.0, 0.667,  0.745
-# 5.56, 4.30, 0.0, 0.0, 0.0, 0.999, -0.0223
-
-#-5.49, 7.53, 0.0, 0.0, 0.0, 0.999,  0.021
+ 5.56, 4.30, 0.0, 0.0, 0.0, 0.999, -0.0223
+-5.49, 7.53, 0.0, 0.0, 0.0, 0.999,  0.021
 
