--- a/mir_vision/CMakeLists.txt
+++ b/mir_vision/CMakeLists.txt
@@ -98,12 +98,11 @@ include_directories(
 # add_executable( detection ${sample_dir}detection.cpp )
 # add_executable( rgbd_tracker ${sample_dir}tutorial-mb-generic-tracker-rgbd-realsense.cpp )
 # add_executable( tutorial-viewer ${sample_dir}tutorial-grabber-realsense.cpp )
+add_executable( detection_learnObject ${sample_dir}LearnObject.cpp )
 add_executable( detection_client ${sample_dir}ActionClient.cpp )
 add_executable( detection_server ${sample_dir}ActionServer.cpp )
-add_dependencies(
-  detection_client ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(
-  detection_server ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(detection_client ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(detection_server ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -123,6 +122,7 @@ add_dependencies(
 # target_link_libraries(detection ${catkin_LIBRARIES} ${VISP_LIBRARIES})
 # target_link_libraries(rgbd_tracker ${catkin_LIBRARIES} ${VISP_LIBRARIES} )
 # target_link_libraries(tutorial-viewer ${catkin_LIBRARIES} ${VISP_LIBRARIES})
+target_link_libraries(detection_learnObject ${catkin_LIBRARIES} ${VISP_LIBRARIES})
 target_link_libraries(detection_client ${catkin_LIBRARIES} ${VISP_LIBRARIES})
 target_link_libraries(detection_server ${catkin_LIBRARIES} ${VISP_LIBRARIES})
 
